# visualization

./: .gitignore  .ycm_extra_conf.py  CMakeLists.SOIL.txt.in  CMakeLists.glm.txt.in  CMakeLists.googletest.txt.in  CMakeLists.jsoncpp.txt.in  CMakeLists.opengl_graphics.txt.in  CMakeLists.opengl_math.txt.in  CMakeLists.proj4.txt.in  CMakeLists.s2-geometry.txt.in  CMakeLists.txt  README.md  declspec.h
cmake/: SOIL.cmake  c++11.cmake  glm.cmake  jsoncpp.cmake  opengl_graphics.cmake  opengl_math.cmake  proj4.cmake  s2-geometry.cmake  utils.cmake
include/com/visualization/: CMakeLists.txt  application.h  camera.h  enums.h  geometry.h  gl_helpers.h  gl_widget.h  glsl_shader_program.h  log_helpers.h  logging.h  main_window.h  scene.h
include/com/visualization/geometries/: CMakeLists.txt  sphere.h
include/com/visualization/scenes/: CMakeLists.txt  indexed_rainbow_rectangle.h  indexed_rainbow_sphere.h  indexed_rainbow_textured_rectangle.h  multi_textured_rectangle.h  projected_textured_rectangle.h  rainbow_triangle.h  simple_triangle.h
lib/: CMakeLists.txt  application.cpp  camera.cpp  geometry.cpp  gl_helpers.cpp  gl_widget.cpp  glsl_shader_program.cpp  log_helpers.cpp  logging.cpp  main_window.cpp  scene.cpp
lib/geometries/: sphere.cpp
lib/scenes/: indexed_rainbow_rectangle.cpp  indexed_rainbow_sphere.cpp  indexed_rainbow_textured_rectangle.cpp  multi_textured_rectangle.cpp  projected_textured_rectangle.cpp  rainbow_triangle.cpp  simple_triangle.cpp
patches/: SOIL_osx_fix.patch  git_SOIL_osx_apply.sh  git_glm_apply.sh  git_s2_geometry_apply.sh  glm_fix.patch  glm_linux_fix.patch  glm_template_fixes.patch  s2_geometry.patch
tests/: CMakeLists.txt  main.cpp  test_camera.cpp  test_logging.cpp
